force-app/main/default/objects/AgileWork__c/AgileWork__c.object-meta.xml
<CustomObject>
    <label>Work</label>
    <nameField>
        <label>Work</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Works</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>