force-app/main/default/objects/AgileWork__c/fields/AgileEpic__c.field-meta.xml
<CustomField>
    <fullName>AgileEpic__c</fullName>
    <label>Épico</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AgileEpic__c.Team__c</field>
            <operation>equals</operation>
            <valueField>$Source.Team__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AgileEpic__c</referenceTo>
    <relationshipLabel>Works</relationshipLabel>
    <relationshipName>Works</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>