force-app/main/default/objects/AgileWork__c/fields/ApprovalObservation__c.field-meta.xml
<CustomField>
    <fullName>ApprovalObservation__c</fullName>
    <label>Observação da aprovação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>