force-app/main/default/objects/AgileWork__c/fields/ApproverDate__c.field-meta.xml
<CustomField>
    <fullName>ApproverDate__c</fullName>
    <label>Data de Aprovação</label>
    <type>DateTime</type>
</CustomField>