force-app/main/default/objects/AgileWork__c/fields/ApproverUser__c.field-meta.xml
<CustomField>
    <fullName>ApproverUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário Aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Works</relationshipName>
    <type>Lookup</type>
</CustomField>