force-app/main/default/objects/AgileWork__c/fields/BaPoints__c.field-meta.xml
<CustomField>
    <fullName>BaPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Escala Fibonacci 1,	2, 3,	5, 8,	13, 21, 34,55, 89, 144, 233, 377</inlineHelpText>
    <label># Pontos Estimados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>