force-app/main/default/objects/AgileWork__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <formula>Text(AgileEpic__r.CloudList__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Núvem</label>
    <type>Text</type>
</CustomField>