force-app/main/default/objects/AgileWork__c/fields/CurrentSprint__c.field-meta.xml
<CustomField>
    <fullName>CurrentSprint__c</fullName>
    <formula>AND(
Sprint__r.StartDate__c &lt;= TODAY(), 
Sprint__r.FinalDate__c &gt;= TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint Atual</label>
    <type>Checkbox</type>
</CustomField>