force-app/main/default/objects/AgileWork__c/fields/DeliveredPointsOnly__c.field-meta.xml
<CustomField>
    <fullName>DeliveredPointsOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quando marcada indica que a work foi clonada e encerrada na Sprint para deixar registrados os pontos concluídos. A work original foi repontuada (pontos &quot;restantes&quot; para concluir a work) e enviada para a próxima Sprint</inlineHelpText>
    <label>PontosConcluídos</label>
    <type>Checkbox</type>
</CustomField>