force-app/main/default/objects/AgileWork__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>