force-app/main/default/objects/AgileWork__c/fields/DevPoints__c.field-meta.xml
<CustomField>
    <fullName>DevPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Pontos Dev</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>