force-app/main/default/objects/AgileWork__c/fields/HasImpediment__c.field-meta.xml
<CustomField>
    <fullName>HasImpediment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work com Pendência</label>
    <type>Checkbox</type>
</CustomField>