force-app/main/default/objects/AgileWork__c/fields/Impediment__c.field-meta.xml
<CustomField>
    <fullName>Impediment__c</fullName>
    <inlineHelpText>Adicione neste campo todas as duvidas ou pendencias relacionadas a descrição desta work</inlineHelpText>
    <label>Pendências</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>