force-app/main/default/objects/AgileWork__c/fields/Improvement__c.field-meta.xml
<CustomField>
    <fullName>Improvement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica que a História de Usuário é uma melhoria de outra história já desenvolvida e entregue anteriormente. Auxilia na análise do backlog e é usado em relatórios e painéis do projeto.</inlineHelpText>
    <label>Melhoria?</label>
    <type>Checkbox</type>
</CustomField>