force-app/main/default/objects/AgileWork__c/fields/OriginalWork__c.field-meta.xml
<CustomField>
    <fullName>OriginalWork__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indica a work que deu origem ao registro visualizado, por exemplo, um Bug pode referenciar a work de origem dele.</inlineHelpText>
    <label>Work de Origem</label>
    <referenceTo>AgileWork__c</referenceTo>
    <relationshipLabel>Works Relacionadas (Origem de:)</relationshipLabel>
    <relationshipName>OriginalWorks</relationshipName>
    <type>Lookup</type>
</CustomField>