force-app/main/default/objects/AgileWork__c/fields/RecordType2__c.field-meta.xml
<CustomField>
    <fullName>RecordType2__c</fullName>
    <label>Tipo Registro Ajustado</label>
    <length>200</length>
    <type>Text</type>
</CustomField>