force-app/main/default/objects/AgileWork__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Team__c</field>
            <operation>equals</operation>
            <valueField>AgileRelease__c.Team__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AgileRelease__c</referenceTo>
    <relationshipLabel>Works da Release</relationshipLabel>
    <relationshipName>ReleaseWorks</relationshipName>
    <type>Lookup</type>
</CustomField>