force-app/main/default/objects/AgileWork__c/fields/ReleaseDeploymentControl__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDeploymentControl__c</fullName>
    <inlineHelpText>Indica o status da Work para planejamento das implantações.</inlineHelpText>
    <label>Controle de Deploy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Pronto para QA</fullName>
            </value>
            <value>
                <fullName>Implantado QA</fullName>
            </value>
            <value>
                <fullName>Pronto para UAT</fullName>
            </value>
            <value>
                <fullName>Implantado em UAT</fullName>
            </value>
            <value>
                <fullName>Pronto para PROD</fullName>
            </value>
            <value>
                <fullName>Implantado PROD</fullName>
            </value>
            <value>
                <fullName>Não Aplicável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>