force-app/main/default/objects/AgileWork__c/fields/RemainingBaPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainingBaPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Pontos Restantes BA</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>