force-app/main/default/objects/AgileWork__c/fields/RemainingDevPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainingDevPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Pontos Restantes Dev</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>