force-app/main/default/objects/AgileWork__c/fields/RemainPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainPoints__c</fullName>
    <formula>RemainingBaPoints__c +  RemainingDevPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Pontos Restantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>