force-app/main/default/objects/AgileWork__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrita atribuida a</label>
    <referenceTo>AgileResource__c</referenceTo>
    <relationshipLabel>Works</relationshipLabel>
    <relationshipName>Works</relationshipName>
    <type>Lookup</type>
</CustomField>