force-app/main/default/objects/AgileWork__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AgileSprint__c.Team__c</field>
            <operation>equals</operation>
            <valueField>$Source.Team__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AgileSprint__c</referenceTo>
    <relationshipLabel>Works</relationshipLabel>
    <relationshipName>Works</relationshipName>
    <type>Lookup</type>
</CustomField>