force-app/main/default/objects/AgileWork__c/fields/SprintRank__c.field-meta.xml
<CustomField>
    <fullName>SprintRank__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>Este campo indica qual será a ordem de execução da Work dentro da Sprint que estiver alocada.</inlineHelpText>
    <label>Ordem na Sprint</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>