force-app/main/default/objects/AgileWork__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nova</fullName>
                <default>true</default>
                <label>Nova</label>
            </value>
            <value>
                <fullName>Em Levantamento</fullName>
            </value>
            <value>
                <fullName>Aguardando Informações</fullName>
            </value>
            <value>
                <fullName>Em Escrita</fullName>
            </value>
            <value>
                <fullName>Revisão Arquiteto</fullName>
            </value>
            <value>
                <fullName>Em Aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Sprint Backlog</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Aguardando APK/IPA</fullName>
            </value>
            <value>
                <fullName>Aguardando Deploy QA</fullName>
            </value>
            <value>
                <fullName>Em Teste Interno</fullName>
            </value>
            <value>
                <fullName>Liberado para PO</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Encerrada</fullName>
            </value>
            <value>
                <fullName>Aguardando APK%2FIPA</fullName>
                <isActive>false</isActive>
                <label>Aguardando APK%2FIPA</label>
            </value>
            <value>
                <fullName>Aguardando Deploy PROD</fullName>
                <isActive>false</isActive>
                <label>Aguardando Deploy PROD</label>
            </value>
            <value>
                <fullName>Em Validação Interna</fullName>
                <isActive>false</isActive>
                <label>Em Validação Interna</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>