force-app/main/default/objects/AgileWork__c/fields/StatusSprint__c.field-meta.xml
<CustomField>
    <fullName>StatusSprint__c</fullName>
    <label>Status Desenvolvimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BackLog</fullName>
                <default>true</default>
                <label>BackLog</label>
            </value>
            <value>
                <fullName>Em Construção</fullName>
            </value>
            <value>
                <fullName>Em Validação</fullName>
            </value>
            <value>
                <fullName>Liberado para o Arquiteto</fullName>
            </value>
            <value>
                <fullName>Liberado para Testes</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>