force-app/main/default/objects/AgileWork__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Time</label>
    <referenceTo>AgileTeam__c</referenceTo>
    <relationshipLabel>Works</relationshipLabel>
    <relationshipName>Works</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>