force-app/main/default/objects/AgileWork__c/fields/TeamMemberAssignedTo__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberAssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membro do Time Atribuído</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AgileTeamMember__c.AgileTeam__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Team__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AgileTeamMember__c</referenceTo>
    <relationshipLabel>Works</relationshipLabel>
    <relationshipName>TeamMemberAssignedWorks</relationshipName>
    <type>Lookup</type>
</CustomField>