force-app/main/default/objects/AgileWork__c/fields/TechnicalDescription__c.field-meta.xml
<CustomField>
    <fullName>TechnicalDescription__c</fullName>
    <label>Descrição Tecnica</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>