force-app/main/default/objects/AgileWork__c/fields/Total_Pontos_Restantes__c.field-meta.xml
<CustomField>
    <fullName>Total_Pontos_Restantes__c</fullName>
    <formula>RemainingBaPoints__c +  RemainingDevPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pontos Restantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>