force-app/main/default/objects/AgileWork__c/fields/TriggerDefaultTasksFlow__c.field-meta.xml
<CustomField>
    <fullName>TriggerDefaultTasksFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quando marcado, deleta as tasks existentes e cria tasks padrao</inlineHelpText>
    <label>Criar Tasks Padrão</label>
    <type>Checkbox</type>
</CustomField>