force-app/main/default/objects/AgileWork__c/fields/UserStoryEQP__c.field-meta.xml
<CustomField>
    <fullName>UserStoryEQP__c</fullName>
    <defaultValue>&quot;Eu:&quot;
+ BR() + &quot;Quero: &quot;
+ BR() + &quot;Para: &quot;</defaultValue>
    <label>User Story (E Q P )</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>