force-app/main/default/objects/AgileWork__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atribuído a</label>
    <referenceTo>AgileResource__c</referenceTo>
    <relationshipLabel>Works (Atribuido a)</relationshipLabel>
    <relationshipName>Works1</relationshipName>
    <type>Lookup</type>
</CustomField>