force-app/main/default/objects/AgileWork__c/fields/WorkApprovedByPo__c.field-meta.xml
<CustomField>
    <fullName>WorkApprovedByPo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quando marcado, o registro foi aprovado por todos os aprovadores do processo de aprovação</inlineHelpText>
    <label>Aprovada pelo PO</label>
    <type>Checkbox</type>
</CustomField>