force-app/main/default/objects/AgileWork__c/fields/WorkCode__c.field-meta.xml
<CustomField>
    <fullName>WorkCode__c</fullName>
    <displayFormat>W{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Código da Work</label>
    <type>AutoNumber</type>
</CustomField>