force-app/main/default/objects/AgileWork__c/fields/WorkCodeTitle__c.field-meta.xml
<CustomField>
    <fullName>WorkCodeTitle__c</fullName>
    <formula>WorkCode__c &amp; &quot;: &quot; &amp; Name</formula>
    <label>Título Completo</label>
    <type>Text</type>
</CustomField>