force-app/main/default/objects/AgileWork__c/fields/WorkEnvironment__c.field-meta.xml
<CustomField>
    <fullName>WorkEnvironment__c</fullName>
    <inlineHelpText>Indica onde o trabalho deve ser realizado. Principalmente utilizado se o projeto tiver Go-live executado.</inlineHelpText>
    <label>Ambiente de Atuação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produção</fullName>
            </value>
            <value>
                <fullName>Homologação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>