force-app/main/default/objects/AgileWork__c/fields/Writer__c.field-meta.xml
<CustomField>
    <fullName>Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pela escrita</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Works1</relationshipName>
    <type>Lookup</type>
</CustomField>