force-app/main/default/objects/AgileWork__c/recordTypes/CaseBug.recordType-meta.xml
<RecordType>
    <fullName>CaseBug</fullName>
    <active>true</active>
    <description>Utilize para registrar um impedimento ou possível problema a ser investigado.</description>
    <label>Chamado</label>
</RecordType>