force-app/main/default/objects/AgileWork__c/recordTypes/UserStory.recordType-meta.xml
<RecordType>
    <fullName>UserStory</fullName>
    <active>true</active>
    <description>Utilize para Histórias de Usuários ou Melhorias</description>
    <label>User Story</label>
</RecordType>