force-app/main/default/objects/AgileWork__c/validationRules/WK_ImpedirEncerradaSemSprint.validationRule-meta.xml
<ValidationRule>
    <fullName>WK_ImpedirEncerradaSemSprint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,&apos;Encerrada&apos;) &amp;&amp;  ISBLANK(Sprint__c )</errorConditionFormula>
    <errorMessage>Não é possível encerrar uma work fora de uma Sprint.</errorMessage>
</ValidationRule>