force-app/main/default/objects/AgileWork__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>BaPoints__c</columns>
    <columns>Status__c</columns>
    <columns>Resource__c</columns>
    <columns>AgileEpic__c</columns>
    <columns>Release__c</columns>
    <columns>Sprint__c</columns>
    <columns>RecordType2__c</columns>
    <columns>SprintRank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileWork__c.UserStory</value>
    </filters>
    <label>Tudo</label>
</ListView>