force-app/main/default/objects/AgileWork__c/listViews/CreatedToday.listView-meta.xml
<ListView>
    <fullName>CreatedToday</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>AgileEpic__c</columns>
    <columns>Status__c</columns>
    <columns>BaPoints__c</columns>
    <columns>Release__c</columns>
    <columns>ApproverDate__c</columns>
    <columns>HasImpediment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SprintRank__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Criadas HOJE</label>
</ListView>