force-app/main/default/objects/AgileWork__c/listViews/F_Todas_Sprint_Atual.listView-meta.xml
<ListView>
    <fullName>F_Todas_Sprint_Atual</fullName>
    <columns>WorkCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Sprint__c</columns>
    <columns>TeamMemberAssignedTo__c</columns>
    <columns>Status__c</columns>
    <columns>BaPoints__c</columns>
    <columns>AgileEpic__c</columns>
    <columns>Improvement__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileWork__c.UserStory</value>
    </filters>
    <filters>
        <field>CurrentSprint__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>F. Todas Sprint Atual</label>
</ListView>