force-app/main/default/objects/AgileWork__c/listViews/G_Todas_Works_em_Teste_PO.listView-meta.xml
<ListView>
    <fullName>G_Todas_Works_em_Teste_PO</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>AgileEpic__c</columns>
    <columns>Status__c</columns>
    <columns>ApproverDate__c</columns>
    <columns>Improvement__c</columns>
    <columns>Release__c</columns>
    <columns>BaPoints__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Liberado para PO</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileWork__c.UserStory</value>
    </filters>
    <label>G. Todas Works em Teste PO</label>
</ListView>