force-app/main/default/objects/AgileWork__c/listViews/SQ1_Todas_Works_sem_Testes_do_Cliente.listView-meta.xml
<ListView>
    <fullName>SQ1_Todas_Works_sem_Testes_do_Cliente</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>BaPoints__c</columns>
    <columns>Status__c</columns>
    <columns>Improvement__c</columns>
    <columns>TeamMemberAssignedTo__c</columns>
    <columns>Sprint__c</columns>
    <columns>AgileEpic__c</columns>
    <columns>Release__c</columns>
    <columns>SprintRank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>startsWith</operation>
        <value>Squad 1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelada,Encerrada</value>
    </filters>
    <filters>
        <field>Release__c</field>
        <operation>notEqual</operation>
        <value>SQ1: Homologações do Projeto</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>SQ1: Sprint</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileWork__c.CaseBug,AgileWork__c.UserStory</value>
    </filters>
    <label>SQ1: Todas Works sem Testes do Cliente</label>
</ListView>