force-app/main/default/objects/AgileWork__c/listViews/Todas_Aprovadas.listView-meta.xml
<ListView>
    <fullName>Todas_Aprovadas</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>AgileEpic__c</columns>
    <columns>Status__c</columns>
    <columns>ApproverDate__c</columns>
    <columns>Improvement__c</columns>
    <columns>Release__c</columns>
    <columns>BaPoints__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Aprovada</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>WorkApprovedByPo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>E. Todas Aprovadas (Ok p/ Desenvolver)</label>
</ListView>