force-app/main/default/objects/AgileWork__c/listViews/Todas_as_Melhorias.listView-meta.xml
<ListView>
    <fullName>Todas_as_Melhorias</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>BaPoints__c</columns>
    <columns>Status__c</columns>
    <columns>ApproverDate__c</columns>
    <columns>Release__c</columns>
    <columns>RecordType2__c</columns>
    <columns>SprintRank__c</columns>
    <columns>TriggerDefaultTasksFlow__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileWork__c.UserStory</value>
    </filters>
    <filters>
        <field>Improvement__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todas as Melhorias</label>
</ListView>