force-app/main/default/objects/AgileWork__c/listViews/Todas_Em_Escrita.listView-meta.xml
<ListView>
    <fullName>Todas_Em_Escrita</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>AgileEpic__c</columns>
    <columns>Status__c</columns>
    <columns>Resource__c</columns>
    <columns>ApproverDate__c</columns>
    <columns>Improvement__c</columns>
    <columns>Release__c</columns>
    <columns>BaPoints__c</columns>
    <columns>HasImpediment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SprintRank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Em Escrita,Em Levantamento,Aguardando Informações</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileWork__c.UserStory</value>
    </filters>
    <label>B. Todas Em Escrita</label>
</ListView>