force-app/main/default/objects/AgileWork__c/listViews/Todas_Novas.listView-meta.xml
<ListView>
    <fullName>Todas_Novas</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>AgileEpic__c</columns>
    <columns>Status__c</columns>
    <columns>ApproverDate__c</columns>
    <columns>Improvement__c</columns>
    <columns>Release__c</columns>
    <columns>BaPoints__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Nova</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileWork__c.UserStory</value>
    </filters>
    <label>A. Todas Novas</label>
</ListView>