force-app/main/default/objects/AgileWork__c/listViews/Todas_Works_Testes_do_Cliente.listView-meta.xml
<ListView>
    <fullName>Todas_Works_Testes_do_Cliente</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>BaPoints__c</columns>
    <columns>Sprint__c</columns>
    <columns>Status__c</columns>
    <columns>TeamMemberAssignedTo__c</columns>
    <columns>AgileEpic__c</columns>
    <columns>Release__c</columns>
    <columns>SprintRank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release__c</field>
        <operation>contains</operation>
        <value>Homologações do Projeto</value>
    </filters>
    <label>Todas Works de Testes do Cliente</label>
</ListView>