force-app/main/default/objects/AgileWork__c/listViews/Todos_Chamados.listView-meta.xml
<ListView>
    <fullName>Todos_Chamados</fullName>
    <columns>WorkCode__c</columns>
    <columns>NAME</columns>
    <columns>BaPoints__c</columns>
    <columns>Sprint__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Improvement__c</columns>
    <columns>TeamMemberAssignedTo__c</columns>
    <columns>AgileEpic__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Release__c</field>
        <operation>notContain</operation>
        <value>Homologações do Projeto</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileWork__c.CaseBug</value>
    </filters>
    <label>Todos Chamados</label>
</ListView>